--- a/SoftAuto/SoftAuto/index.html
+++ b/SoftAuto/SoftAuto/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
 	<title>Soft Auto</title>
+	<meta charset="utf-8">
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/styles.css">
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
@@ -28,10 +28,10 @@
             <div class="info">
                 <strong>Contact: (056) 482 3232</strong>
                 <select>
-                    <option value="">Select your language</option>
-                    <option value="">Български</option>
-                    <option value="">Английски</option>
-                    <option value="">Немски</option>
+                    <option value="language">Select your language</option>
+                    <option value="bulgarian">Български</option>
+                    <option value="english">Английски</option>
+                    <option value="german">Немски</option>
                 </select>
             </div>
             <nav>
@@ -56,22 +56,22 @@
             <div class="slider-wrap">
                 <div class="login">
                     <div class="log">
-                        <label for="">Име</label>
+                        <label for="#">Име</label>
                         <input type="text"/>
 
-                        <label for="">Фамилия</label>
+                        <label for="#">Фамилия</label>
                         <input type="text"/>
 
-                        <label for="">Пол</label>
+                        <label for="#">Пол</label>
                         <select id="sex">
                             <option value="m">Мъж</option>
                             <option value="f">Жена</option>
                         </select>
 
-                        <label for="">Потребителско име</label>
+                        <label for="#">Потребителско име</label>
                         <input id="username" type="text"/>
 
-                        <label for="">Парола</label>
+                        <label for="#">Парола</label>
                         <input type="password"/>
 
                         <button class="button blue login-button">Вход</button>
@@ -87,9 +87,9 @@
                     <h2>Luxury car from 200$</h2>
                     <h4>Treat yourself in USA</h4>
                     <div id="slides">
-                        <img width="180" src="images/1.png" alt=""/>
-                        <img width="180" src="images/2.png" alt=""/>
-                        <img width="180" src="images/3.png" alt=""/>
+                        <img width="180" src="images/1.png" alt="car"/>
+                        <img width="180" src="images/2.png" alt="car"/>
+                        <img width="180" src="images/3.png" alt="car"/>
                     </div>
 
                 </div>
@@ -170,7 +170,7 @@
         </main>
 	
         <footer>
-            <p style="float:right">2015</p>
+            <p>2015</p>
         </footer>
 
         <script src="js/jquery.slides.js"></script>
