--- a/SoftAuto/SoftAuto/profile.html
+++ b/SoftAuto/SoftAuto/profile.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
     <title>Soft Auto</title>
+	<meta charset="utf-8">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
@@ -25,10 +25,10 @@
     <div class="info">
         <strong>Contact: (056) 482 3232</strong>
         <select>
-            <option value="">Select your language</option>
-            <option value="">Български</option>
-            <option value="">Английски</option>
-            <option value="">Немски</option>
+            <option value="language">Select your language</option>
+            <option value="bulgarian">Български</option>
+            <option value="english">Английски</option>
+            <option value="german">Немски</option>
         </select>
     </div>
     <nav>
@@ -53,7 +53,7 @@
 <main>
     <section class="wrapper-profiles">
         <article>
-            <img src="images/nakov/Nakov-Profil.jpg" class="main-img" alt=""/>
+            <img src="images/nakov/Nakov-Profil.jpg" class="main-img" alt="nakov-profile"/>
             <div class="profile-desc">
                 <h3>Светлин Наков</h3>
                 <p>
@@ -61,25 +61,27 @@
                     Противоречиви са данните кога точно започва автомобилната кариера на г-н Наков, а и историята мълчи по въпроса. Нашият сайт обаче, успя да се сдобие със снимка на неговият първи автомобил.
                 </p>
                 <div class="hidden-desc">
-                    <img src="images/nakov/nakovs-first-car.jpg" alt=""/>
+                    <img src="images/nakov/nakovs-first-car.jpg" alt="nakov-first-car"/>
                     <p>
                         Както се вижда, още от първите мигове зад волана, сигурността е била основна грижа за младият и неопитен все още шофьор.
                         През следващите години Наков подобрява значително своите умения във шофирането, за което свидетерстват следните кадри:
                     </p>
-                    <img src="images/nakov/nakovs-driving-skills_1.jpg" alt=""/> <img src="images/nakov/nakovs-driving-skills_2.jpg" alt=""/> <img src="images/nakov/nakovs-driving-skills_3.jpg" alt=""/>
+                    <img src="images/nakov/nakovs-driving-skills_1.jpg" alt="nakov-driving-skills"/> 
+					<img src="images/nakov/nakovs-driving-skills_2.jpg" alt="nakov-driving-skills"/> 
+					<img src="images/nakov/nakovs-driving-skills_3.jpg" alt="nakov-driving-skills"/>
                     <p>
                         Въпреки трудностите в началото, кариерата на г-н Наков търпи възход. Само за няколко години той преминава през почти всички големи таксиметрови компании, за да се озове накрая при нас – СофтАуто.
                         По мнение на нашите кленти, той е истински професионалист и незаменим събеседник на тема  „обогатяване на горивната смес при УАЗ 3151“ .
                         Не се колебайте да го наемете - пристигането навреме и мириса на разтопен каучук са гарантирани!
                     </p>
                 </div>
-                <a class="button blue" href="">Още</a>
+                <a class="button blue" href="#">Още</a>
             </div>
             <div class="clear"></div>
         </article>
 
         <article>
-            <img src="images/rosica/Rosica-profil.jpg" class="main-img" alt=""/>
+            <img src="images/rosica/Rosica-profil.jpg" class="main-img" alt="rosica-profile"/>
             <div class="profile-desc">
                 <h3>Роси</h3>
                 <p>
@@ -87,26 +89,30 @@
                     Роси е привърженичка на мотото, че „все от някъде“ трябва да се започне и СофтАуто винаги стои зад нея в тези дълбокосмислени и от общонационално значение начинания:
                 </p>
                 <div class="hidden-desc">
-                    <img src="images/rosica/at-the-beginning.jpg" alt=""/>
+                    <img src="images/rosica/at-the-beginning.jpg" alt="rosica-beginning"/>
                     <p>
                         Често проявява непринудена креативност и успява да ни изненада с практичните си и полезни за милиони авто-маниаци решения:
                     </p>
-                    <img src="images/rosica/rosi-creativity-1.jpg" alt=""/> <img src="images/rosica/rosi-creativity-2.jpg" alt=""/> <img src="images/rosica/rosi-creativity-3.jpg" alt=""/>
+                    <img src="images/rosica/rosi-creativity-1.jpg" alt="rosi-creativity"/> 
+					<img src="images/rosica/rosi-creativity-2.jpg" alt="rosi-creativity"/> 
+					<img src="images/rosica/rosi-creativity-3.jpg" alt="rosi-creativity"/>
                     <p>
                         Когато постъпи при нас, решихме да я пощадим от тежкия труд в сервиза, като и поставяме въжможно най-елементарните задачи:
                     </p>
-                    <img src="images/rosica/rosi-in-action-1.jpg" alt=""/> <img src="images/rosica/rosi-in-action-2.jpg" alt=""/> <img src="images/rosica/rosi-in-action-3.jpg" alt=""/>
+                    <img src="images/rosica/rosi-in-action-1.jpg" alt="rosi-in-action"/> 
+					<img src="images/rosica/rosi-in-action-2.jpg" alt="rosi-in-action"/> 
+					<img src="images/rosica/rosi-in-action-3.jpg" alt="rosi-in-action"/>
                     <p>
                         Препоръчваме Роси за шофьор на всички, които искат поне за момент да забравят за дупките по пътищата, неспазването на правилата и липсата на толерантност на пътя. Всичко това ще бъде заменено с усещането за доста подробна прожекция на собственият Ви живот, който ще мине през главата Ви като на кинолента.
                     </p>
                 </div>
-                <a class="button blue" href="">Още</a>
+                <a class="button blue" href="#">Още</a>
             </div>
             <div class="clear"></div>
         </article>
 
         <article>
-            <img src="images/nikolay/Nikolai-Profil.jpg" class="main-img" alt=""/>
+            <img src="images/nikolay/Nikolai-Profil.jpg" class="main-img" alt="nikolay-profile"/>
             <div class="profile-desc">
                 <h3>Николай Банкин</h3>
                 <p>
@@ -114,28 +120,30 @@
                     Причината Николай да е в нашият екип е неговото неспирно влечение към иновациите. Едва на 5 годишна възраст, той успява да превърне семейният амтомобил в истинско страшилище на пътя:
                 </p>
                 <div class="hidden-desc">
-                    <img src="images/nikolay/nikolay-family-car.jpg" alt=""/>
+                    <img src="images/nikolay/nikolay-family-car.jpg" alt="nikolay-family-car"/>
                     <p>
                         Няколко месеца по-късно прави същото и с автомобила на неговият съсед от гория етаж, като резултатите са още по-впечатляващи:
                     </p>
-                    <img src="images/nikolay/nikolay-neighbour.jpg" alt=""/>
+                    <img src="images/nikolay/nikolay-neighbour.jpg" alt="nikolay-neighbour"/>
                     <p>
                         Тези очевидно успешни експерименти окуражават Николай и той продължава своите опити в търсенето на „съвършенният“ автомобил. С това той си спечелва уважение в авто-средите и досие в кварталното РПУ.
                         Осъзнавайки значимостта на своите открития, от извество време насам Банкин провежда открити специализирани семинари в различни гета из цялата страна. Някой от по-значимите достижения на негови поддръжници са:
                     </p>
-                    <img src="images/nikolay/nikolay-friends-1.jpg" alt=""/> <img src="images/nikolay/nikolay-friends-2.jpg" alt=""/> <img src="images/nikolay/nikolay-friends-3.jpg" alt=""/>
+                    <img src="images/nikolay/nikolay-friends-1.jpg" alt="nikolay-friends"/> 
+					<img src="images/nikolay/nikolay-friends-2.jpg" alt="nikolay-friends"/> 
+					<img src="images/nikolay/nikolay-friends-3.jpg" alt="nikolay-friends"/>
                     <p>
                         Със своите умения и безупречна репутация, Николай е спечелил много редовни клиенти на СофтАуто. Най-харесваното негово качество е вроденото чувството за безпогрешна ориентация:
                     </p>
-                    <img src="images/nikolay/nikolay-gps.jpg" alt=""/>
+                    <img src="images/nikolay/nikolay-gps.jpg" alt="nikolay-gps"/>
                 </div>
-                <a class="button blue" href="">Още</a>
+                <a class="button blue" href="#">Още</a>
             </div>
             <div class="clear"></div>
         </article>
 
         <article>
-            <img src="images/bogomil/Bogomil-profil.jpg" class="main-img" alt=""/>
+            <img src="images/bogomil/Bogomil-profil.jpg" class="main-img" alt="bogomil-profile"/>
             <div class="profile-desc">
                 <h3>Богомил Димитров</h3>
                 <p>
@@ -143,20 +151,24 @@
                     Едно от качествата, които Богомил притежава е желанието винаги да помага на хората и да улеснява техните часове прекарани зад волана. Начина, по който той гледа на СофтАуто е следният:
                 </p>
                 <div class="hidden-desc">
-                    <img src="images/bogomil/bogomil-filosofy.jpg" alt=""/>
+                    <img src="images/bogomil/bogomil-filosofy.jpg" alt="bogomil-filosofy"/>
                     <p>
                         Постиженията в областта на автоелектрониката, за кото е лично отговорен са много. По-голямата част от тях се утвърдиха като незаменими средства за борба със стреса в пиковите часове на денонощието:
                     </p>
-                    <img src="images/bogomil/bogomil-gdjets.jpg" alt=""/> <img src="images/bogomil/bogomil-gadjets-2.jpg" alt=""/> <img src="images/bogomil/bogomil-gadjest-3.jpg" alt=""/>
+                    <img src="images/bogomil/bogomil-gdjets.jpg" alt="bogomil-gdjets"/> 
+					<img src="images/bogomil/bogomil-gadjets-2.jpg" alt="bogomil-gdjets"/> 
+					<img src="images/bogomil/bogomil-gadjest-3.jpg" alt="bogomil-gdjets"/>
                     <p>
                         На особена почит в обществото са редица негови екстериорни решения, които разчупват представата за сивата и скучна външност на автомобилите. Благодарение на тях, собствениците на тези автомобили получиха или предстои да получат необходимата им медицнска помощ, съобразена с техните нужди.
                      </p>
-                    <img src="images/bogomil/bogomil-design-1.jpg" alt=""/> <img src="images/bogomil/bogomil-design-2.jpg" alt=""/> <img src="images/bogomil/bogomil-design-3.jpg" alt=""/>
+                    <img src="images/bogomil/bogomil-design-1.jpg" alt="bogomil-design"/> 
+					<img src="images/bogomil/bogomil-design-2.jpg" alt="bogomil-design"/> 
+					<img src="images/bogomil/bogomil-design-3.jpg" alt="bogomil-design"/>
                     <p>
                         С избора на Богомил за Ваш шофьор, Вие си осигурявате освен транспортна услуга, и сериозен обем задълбочени познания в цветознанието.
                     </p>
                 </div>
-                <a class="button blue" href="">Още</a>
+                <a class="button blue" href="#">Още</a>
             </div>
             <div class="clear"></div>
         </article>
@@ -168,7 +180,7 @@
 </main>
 
 <footer>
-    <p style="float:right">2015</p>
+    <p>2015</p>
 </footer>
 
 <script src="js/jquery.slides.js"></script>
