--- a/SoftAuto/SoftAuto/index.html
+++ b/SoftAuto/SoftAuto/index.html
@@ -56,29 +56,29 @@
             <div class="slider-wrap">
                 <div class="login">
                     <div class="log">
-                        <label for="#">Име</label>
+                        <label>Име</label>
                         <input type="text"/>
 
-                        <label for="#">Фамилия</label>
+                        <label>Фамилия</label>
                         <input type="text"/>
 
-                        <label for="#">Пол</label>
+                        <label>Пол</label>
                         <select id="sex">
                             <option value="m">Мъж</option>
                             <option value="f">Жена</option>
                         </select>
 
-                        <label for="#">Потребителско име</label>
+                        <label>Потребителско име</label>
                         <input id="username" type="text"/>
 
-                        <label for="#">Парола</label>
+                        <label>Парола</label>
                         <input type="password"/>
 
                         <button class="button blue login-button">Вход</button>
                     </div>
                     <div class="log-user">
                         Здравейте, <span id="username-profile"></span>
-                        <img id="image-profile" src="images/female.png" />
+                        <img id="image-profile" src="images/female.png" alt="image"/>
                     </div>
 
                 </div>
@@ -148,7 +148,7 @@
                         ден без технически или други подобни проблеми. Славният британски тим и днес в първия ден от
                         втората серия предсезонни тестове си събра багажа от писта "Каталуния" край Барселона.
                     </p>
-                    <a class="button blue" href="http://formula1.sportal.bg/news.php?id=19021"target="_blank">Още</a>
+                    <a class="button blue" href="http://formula1.sportal.bg/news.php?id=19021" target="_blank">Още</a>
                     <div class="clear"></div>
                 </article>
 
@@ -161,7 +161,7 @@
                         си от 2014. В нея ще седне тестовият пилот на Мерцедес Паскал Верлен, който освен два дни на
                         "Каталуния", ще получи възможност да кара за тима и в двата теста през сезона.
                     </p>
-                    <a class="button blue" href="http://formula1.sportal.bg/news.php?id=19016"target="_blank">Още</a>
+                    <a class="button blue" href="http://formula1.sportal.bg/news.php?id=19016" target="_blank">Още</a>
                     <div class="clear"></div>
                 </article>
 
