--- a/SoftAuto/SoftAuto/articles.html
+++ b/SoftAuto/SoftAuto/articles.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Soft Auto</title>
     <meta charset="utf-8">
+    <title>Soft Auto</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
@@ -17,10 +17,10 @@
     <div class="info">
         <strong>Contact: (056) 482 3232</strong>
         <select>
-            <option value="language">Select your language</option>
-            <option value="bulgarian">Български</option>
-            <option value="english">Английски</option>
-            <option value="german">Немски</option>
+            <option value="">Select your language</option>
+            <option value="">Български</option>
+            <option value="">Английски</option>
+            <option value="">Немски</option>
         </select>
     </div>
     <nav>
@@ -45,7 +45,7 @@
 <main>
     <section class="wrapper-articles">
         <article class="article">
-            <img src="images/articles/1.jpg" alt="article-image"/>
+            <img src="images/articles/1.jpg" alt=""/>
             <p>
                 Надеждна задна чистачка, с иновативен и модерен дизайн. Олекотена конструкция и намалена консумация на ел. енергия.
             </p>
@@ -60,7 +60,7 @@
 
 
         <article class="article">
-            <img src="images/articles/2.jpg" alt="article-image"/>
+            <img src="images/articles/2.jpg" alt=""/>
             <p>
                 Реплика на алуминиева джанта. Много запазена. Използвана е само веднъж, и то при слънчево време.
             </p>
@@ -75,7 +75,7 @@
 
 
         <article class="article">
-            <img src="images/articles/3.jpg" alt="article-image"/>
+            <img src="images/articles/3.jpg" alt=""/>
             <p>
                 Предни чистачки. Състояние – добро. Бонус при закупуване и на двете – моторче за задвижване.
                 Коментар – продавам ги защото ми откраднаха колата.
@@ -91,7 +91,7 @@
 
 
         <article class="article">
-            <img src="images/articles/4.jpg" alt="article-image"/>
+            <img src="images/articles/4.jpg" alt=""/>
             <p>
                 Автомивка:
                 Всички видове „мокро“ и „сухо“ почистване. Натурално сушене (услугата е налична само при хубаво време).
@@ -108,7 +108,7 @@
 
 
         <article class="article">
-            <img src="images/articles/5.jpg" alt="article-image"/>
+            <img src="images/articles/5.jpg" alt=""/>
             <p>
                 Строителни и снегопочистващи услуги. Бързо и качествено изпълнение. Добре поддръжна техника. Работим денонощно.
             </p>
@@ -123,7 +123,7 @@
 
 
         <article class="article">
-            <img src="images/articles/6.jpg" alt="article-image"/>
+            <img src="images/articles/6.jpg" alt=""/>
             <p>
                 Експресни авторемонтни услуги. Разполагаме с добре обучен и сертифициран персонал.
                 Извършваме посещения и на място.
@@ -139,7 +139,7 @@
         <article class="article">
 
 
-            <img src="images/articles/7.jpg" alt="article-image"/>
+            <img src="images/articles/7.jpg" alt=""/>
             <p>
                 Ликвидация! Само днес и само при нас - при закпуване половин автомобил получавате бонус-точки или ваучер за подарък, с който можете да изненадате приятно своите приятели и близки.
             </p>
@@ -154,7 +154,7 @@
         <article class="article">
 
 
-            <img src="images/articles/8.jpg" alt="article-image"/>
+            <img src="images/articles/8.jpg" alt=""/>
             <p>
                 Специализиран превоз. Гъвкаво работно време и техника. Нашето мото е: “Няма недостъпни места“.
             </p>
@@ -169,7 +169,7 @@
 
 
         <article class="article">
-            <img src="images/articles/9.jpg" alt="article-image"/>
+            <img src="images/articles/9.jpg" alt=""/>
             <p>
                 Последен модел Тъщомобил. Спортно окачване. Металик и махагон. Два режима на работа: въздушен и наземен. Високопроходим.
             </p>
@@ -184,7 +184,7 @@
 
 
         <article class="article">
-            <img src="images/articles/10.jpg" alt="article-image"/>
+            <img src="images/articles/10.jpg" alt=""/>
             <p>
                 Напълно функционален детски конструктор. Над 5000 части. Без иструкция за сглобяване. За деца до 3 годишна възраст.
             </p>
@@ -199,7 +199,7 @@
         <article class="article">
 
 
-            <img src="images/articles/11.jpg" alt="article-image"/>
+            <img src="images/articles/11.jpg" alt=""/>
             <p>
                 Целодневна занималня за домашни любимци. Осигурени кетъринг, аниматори и разнообразни спортни занимания.
             </p>
@@ -218,7 +218,7 @@
 </main>
 
 <footer>
-    <p>2015</p>
+    <p style="float:right">2015</p>
 </footer>
 
 <script src="js/jquery.slides.js"></script>
