--- a/SoftAuto/SoftAuto/index.html
+++ b/SoftAuto/SoftAuto/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Soft Auto</title>
 	<meta charset="utf-8">
+	<title>Soft Auto</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/styles.css">
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
@@ -28,10 +28,10 @@
             <div class="info">
                 <strong>Contact: (056) 482 3232</strong>
                 <select>
-                    <option value="language">Select your language</option>
-                    <option value="bulgarian">Български</option>
-                    <option value="english">Английски</option>
-                    <option value="german">Немски</option>
+                    <option value="">Select your language</option>
+                    <option value="">Български</option>
+                    <option value="">Английски</option>
+                    <option value="">Немски</option>
                 </select>
             </div>
             <nav>
@@ -56,29 +56,29 @@
             <div class="slider-wrap">
                 <div class="login">
                     <div class="log">
-                        <label>Име</label>
+                        <label for="">Име</label>
                         <input type="text"/>
 
-                        <label>Фамилия</label>
+                        <label for="">Фамилия</label>
                         <input type="text"/>
 
-                        <label>Пол</label>
+                        <label for="">Пол</label>
                         <select id="sex">
                             <option value="m">Мъж</option>
                             <option value="f">Жена</option>
                         </select>
 
-                        <label>Потребителско име</label>
+                        <label for="">Потребителско име</label>
                         <input id="username" type="text"/>
 
-                        <label>Парола</label>
+                        <label for="">Парола</label>
                         <input type="password"/>
 
                         <button class="button blue login-button">Вход</button>
                     </div>
                     <div class="log-user">
                         Здравейте, <span id="username-profile"></span>
-                        <img id="image-profile" src="images/female.png" alt="image"/>
+                        <img id="image-profile" src="images/female.png" />
                     </div>
 
                 </div>
@@ -87,9 +87,9 @@
                     <h2>Luxury car from 200$</h2>
                     <h4>Treat yourself in USA</h4>
                     <div id="slides">
-                        <img width="180" src="images/1.png" alt="car"/>
-                        <img width="180" src="images/2.png" alt="car"/>
-                        <img width="180" src="images/3.png" alt="car"/>
+                        <img width="180" src="images/1.png" alt=""/>
+                        <img width="180" src="images/2.png" alt=""/>
+                        <img width="180" src="images/3.png" alt=""/>
                     </div>
 
                 </div>
@@ -148,7 +148,7 @@
                         ден без технически или други подобни проблеми. Славният британски тим и днес в първия ден от
                         втората серия предсезонни тестове си събра багажа от писта "Каталуния" край Барселона.
                     </p>
-                    <a class="button blue" href="http://formula1.sportal.bg/news.php?id=19021" target="_blank">Още</a>
+                    <a class="button blue" href="http://formula1.sportal.bg/news.php?id=19021"target="_blank">Още</a>
                     <div class="clear"></div>
                 </article>
 
@@ -161,7 +161,7 @@
                         си от 2014. В нея ще седне тестовият пилот на Мерцедес Паскал Верлен, който освен два дни на
                         "Каталуния", ще получи възможност да кара за тима и в двата теста през сезона.
                     </p>
-                    <a class="button blue" href="http://formula1.sportal.bg/news.php?id=19016" target="_blank">Още</a>
+                    <a class="button blue" href="http://formula1.sportal.bg/news.php?id=19016"target="_blank">Още</a>
                     <div class="clear"></div>
                 </article>
 
@@ -170,7 +170,7 @@
         </main>
 	
         <footer>
-            <p>2015</p>
+            <p style="float:right">2015</p>
         </footer>
 
         <script src="js/jquery.slides.js"></script>
