--- a/SoftAuto/SoftAuto/rent.html
+++ b/SoftAuto/SoftAuto/rent.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Soft Auto</title>
     <meta charset="utf-8">
+    <title>Soft Auto</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
@@ -17,10 +17,10 @@
     <div class="info">
         <strong>Contact: (056) 482 3232</strong>
         <select>
-            <option value="language">Select your language</option>
-            <option value="bulgarian">Български</option>
-            <option value="english">Английски</option>
-            <option value="german">Немски</option>
+            <option value="">Select your language</option>
+            <option value="">Български</option>
+            <option value="">Английски</option>
+            <option value="">Немски</option>
         </select>
     </div>
     <nav>
@@ -45,7 +45,8 @@
 <main>
     <section class="wrapper-rent">
         <article class="rent-a-car">
-            <img src="images/rent/Avtomobil-Angel.jpg" alt="automobile-angel"/>
+            <img src="images/rent/Avtomobil-Angel.jpg" alt=""/>
+
                 <p>
                     В случай че имате нужда да преборите трафика	и задръстванията и най-вече ако търсите по-атрактивен и екстремен начин да стигнете до където и да е, възможността да наемете мотор от нас е донякъде възможна. За вашето гарантирано пристигане на време ще се погрижи не безизвестния шофьор и каскадьор Ангел Георгиев, който все още не е част от нашия екип поради застрахователни причини и в повечето случаи не успяваме да се свържим с него за поръчки от клиенти. Но все пак ако не чувствате вече ръката си от натискане на клаксона и заедно с това нямате никакво чувство за самосъхранение, не се колебайте да използвате нашата услуга.
                     Това, което гарантираме е, че ще се опитаме да го намерим и пратим на нужния адрес. Имайте предвид, че интервенциите по пътищата са му спечелили възможността да бъде лице на популярната игра Grand Theft Auto: Vice City, въпреки че в последствие се  отказва, признавайки, че не иска децата му да разбират с какво се занимава наистина. Така че оставаме преценката на вас. Ако имате нужда, това е вашата възможност.
@@ -53,9 +54,10 @@
                 </p>
 
                 <p>Цена: 123 лв.</p>
+            </div>
         </article>
         <article class="rent-a-car">
-            <img src="images/rent/Avtomobil-Bogomil.jpg" alt="automobile-bogomil"/>
+            <img src="images/rent/Avtomobil-Bogomil.jpg" alt=""/>
             <p>Ако желаете да заложите на не толкова бързия и екстремен транспорт, ако обичате да се наслаждавате на пътя и ако сте почитател на класическите елегантни автомобили...до скоро можехте да намерите това при нас. За съжаление няколко от нашите автомобили изчезнаха и в момента разчитаме на няколко древни машини, които са изключително неудобни, но все пак ще ви свършат работа, вслучай че за вас времето никога не е било пари.
                 В момента услугата не е налична, поради липса на шофьори, желаещи да карат настоящите автомобили.
                 Поради огромния интерес към тази услуга и тъй като бяхме заринати от въпроси, какво се случва с Богомил Ангелов, който до скоро отговаряше и беше шофьор на класическите автомобили, искаме да съобщим, че всичко с него е наред. В момента преследва Ангел Георгиев (виж наем мотор), за който смята, че е откраднал изчезналите превозни средства. Веднага щом се върне ще възобновим тази услуга, като също така ще пободбрим услугата за наемане на мотор, знаейки вече местоположението на Ангел.
@@ -63,21 +65,21 @@
             <p>Цена: 123 лв.</p>
         </article>
         <article class="rent-a-car">
-            <img src="images/rent/Avtomobil-nakov.jpg" alt="automobile-nakov"/>
+            <img src="images/rent/Avtomobil-nakov.jpg" alt=""/>
             <p>Ако нямате проблем с това, че се задава нова продукция на „Бързи и яростни”, впреки че зад името ще стои абсурдното вече число 7, то най-вероятно сте почитател на високите скорости и бързите коли. Това означава, че вероятно сте попаднали на най-правилната за вас услуга, вслучай че имате нужда от транспорт. Ако пък не изпитвате страх от нищо или просто имате психически отклонения, леки или тежки, то със сигурност това е правилната услуга за вас.
                 Разполагаме със няколко великолепни автомобила, които разбиват всякакви представи за бърза скорост. Понякога пък просто се разбиват с бърза скорост и гледката е вън от всякакви представи, но когато зад волана е нашият безценен шофьор Светлин Наков може да бъдете спокойни. Поне той така казва.
             </p>
             <p>Цена: 123 лв.</p>
         </article>
         <article class="rent-a-car">
-            <img src="images/rent/Avtomobil-Niki.jpg" alt="automobile-niki"/>
+            <img src="images/rent/Avtomobil-Niki.jpg" alt=""/>
             <p>Случвало ли ви се е да пътувате за някъде и единственото свободно място в колата е багажника. Е на един човек от нашия екип му се е случвало многократно, споделяйки, че колкото и спокойно да е отзад, удобството винаги трябва е главен фактор. Този човек е именно Николай Банкин. Той е причината да пуснем в движение и нашия специален автобус, дело не на кой да е, а именно на Николай. С него може да пътувате до която точка на света пожелаете. Имайте впредвид, че ако сте група над 15 човека, пътуваме единствено в равнинни зони.
                 Автобусът е оборудван със всички екстри, включително и катапултиращи седалки. Наложи се да се сдобием с тях под натиск на наши клиенти, след като Банкин спечели за пореден път световния шампионат по автомобилизъм „Drink & Drive”, който странно, но няма нищо общо с услугата, носеща същото име.
             </p>
             <p>Цена: 123 лв.</p>
         </article>
         <article class="rent-a-car">
-            <img src="images/rent/Avtomobil-Rosica.jpg" alt="automobile-rosi"/>
+            <img src="images/rent/Avtomobil-Rosica.jpg" alt=""/>
             <p>Възползвайте се и от новите ни куриерски услуги. Извършваме доставки на каквото и да е, до която и да е точка по света, като имаме както сухопътен, така и морски транспорт. Сомалия е единствената дестинация, която не достъпваме. Но и това се е случвало, веднъж.
                 Гарантираме пристигане на доставката до 30 дни, като срока се удължава в зависимост от почивните дни както следва:
                 - при наличие на 1 почивен ден – срок на доставка: 33 дни;
@@ -91,7 +93,7 @@
 </main>
 
 <footer>
-    <p>2015</p>
+    <p style="float:right">2015</p>
 </footer>
 
 <script src="js/jquery.slides.js"></script>
